rubah posisi fragment_on_board_image.xml , fragment_on_board_image_two.xml, fragment_on_board_login1.xml

--- a/app/src/main/res/layout/fragment_on_board_login1.xml
+++ b/app/src/main/res/layout/fragment_on_board_login1.xml
@@ -10,14 +10,16 @@
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:src="@drawable/ic_landing_page3"
-        tools:layout_editor_absoluteX="80dp"
-        tools:layout_editor_absoluteY="154dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="280dp"
+        android:layout_marginBottom="170dp"
         android:text="Tulis nama mu dibawah"
         android:textSize="20dp"
         android:textStyle="bold"
