--- a/app/src/main/res/layout/fragment_on_board_image_two.xml
+++ b/app/src/main/res/layout/fragment_on_board_image_two.xml
@@ -10,8 +10,10 @@
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:src="@drawable/ic_landing_page2"
-        tools:layout_editor_absoluteX="80dp"
-        tools:layout_editor_absoluteY="154dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"  />
 
     <TextView
         android:layout_width="wrap_content"
@@ -19,7 +21,7 @@
         android:text="Bermain suit melawan sesama Komputer"
         android:textStyle="bold"
         android:textSize="20dp"
-        android:layout_marginBottom="300dp"
+        android:layout_marginBottom="210dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
